feat: new arquitecture for both lines of auth